@@ -3,6 +3,8 @@ CHANGES IN FLTK 1.3.5					RELEASED: ??? ?? 2018
 
 Bug fixes and other improvements
 
+	- Make sure not to access Fl_Menu_ widgets if the widget gets
+	  deleted while the menu (pulldown) is open (STR #3503).
 	- Fixed CMake build (fluid) on case sensitive macOS file systems.
 	- Windows/OpenGL: improved pixel format detection (STR #3119).
 	- Added support for MacOS 10.14 "Mojave": all drawing to windows is done
